<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/TextViewStyle"
            android:text="@string/one" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/TextViewStyle"
            android:text="@string/two"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/TextViewStyle"
            android:text="@string/three"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/TextViewStyle"
            android:text="@string/four"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exchange"/>

</LinearLayout>