<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.nicehiro.projectonetest.MainActivity">

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/test_1"/>
    <Button
        android:id="@+id/test_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="go"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/test_2"/>
    <Button
        android:id="@+id/test_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="go"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/test_3" />
    <Button
        android:id="@+id/test_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="go"/>
</LinearLayout>
